--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -6,6 +6,13 @@
 
 //*******************************/
 
+h1
+  font-family: $ff-alt
+
+h2
+  font-family: $ff-primary
+
+
 section
   margin-bottom: 50px
 
