--- a/app/css/app.css
+++ b/app/css/app.css
@@ -417,7 +417,7 @@ select {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 62.5rem; }
+  max-width: 90rem; }
   .row:before, .row:after {
     content: " ";
     display: table; }
@@ -3719,7 +3719,7 @@ ul.pagination {
   @media only screen and (min-width:40.063em) {
     .reveal-modal {
       width: 80%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
@@ -3735,35 +3735,35 @@ ul.pagination {
   @media only screen and (min-width:40.063em) {
     .reveal-modal.tiny {
       width: 30%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.small {
       width: 40%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.medium {
       width: 60%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.large {
       width: 70%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.xlarge {
       width: 95%;
-      max-width: 62.5rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
@@ -3777,7 +3777,7 @@ ul.pagination {
     @media only screen and (min-width:40.063em) {
       .reveal-modal.full {
         width: 100vw;
-        max-width: 62.5rem;
+        max-width: 90rem;
         left: 0;
         right: 0;
         margin: 0 auto; } }
@@ -4967,7 +4967,7 @@ meta.foundation-mq-topbar {
     .top-bar.expanded {
       background: #333333; }
   .contain-to-grid .top-bar {
-    max-width: 62.5rem;
+    max-width: 90rem;
     margin: 0 auto;
     margin-bottom: 0; }
   .top-bar-section {
@@ -5802,6 +5802,12 @@ th.hide-for-touch {
 
 .half {
   width: 50%; }
+
+h1 {
+  font-family: "Times New Roman"; }
+
+h2 {
+  font-family: Arial; }
 
 section {
   margin-bottom: 50px; }
