--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -52,7 +52,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // This is the default html and body font-size for the base rem value.
-// $rem-base: 16px;
+// $rem-base: 16px
 
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions"
@@ -79,7 +79,7 @@ $include-html-global-classes: $include-html-classes
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
+$row-width: rem-calc(1440)
 // $total-columns: 12;
 // $column-gutter: rem-calc(30);
 
@@ -111,6 +111,9 @@ $include-html-global-classes: $include-html-classes
 // $opposite-direction: right;
 // $default-float: left;
 // $last-child-float: $opposite-direction;
+
+$ff-primary: Arial
+$ff-alt: "Times New Roman"
 
 // We use these as default colors throughout
 $primary-color: #008CBA
