--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -79,9 +79,9 @@ $include-html-global-classes: $include-html-classes
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: rem-calc(1440)
+$row-width: rem-calc(2000)
 // $total-columns: 12;
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(28)
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -92,14 +92,17 @@ $row-width: rem-calc(1440)
 
 // Global
 
+$ff-primary: ff-dagny-web-pro
+$ff-alt: ff-zwo-corr-web-pro
+
 // We use these to define default font weights
 // $font-weight-normal: normal !default;
 // $font-weight-bold: bold !default;
 
 // We use these to control various global styles
 // $body-bg: $white;
-// $body-font-color: $jet;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-color: #676565
+$body-font-family: $ff-primary
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -112,15 +115,12 @@ $row-width: rem-calc(1440)
 // $default-float: left;
 // $last-child-float: $opposite-direction;
 
-$ff-primary: Arial
-$ff-alt: "Times New Roman"
-
 // We use these as default colors throughout
-$primary-color: #008CBA
+$primary-color: #0072bc
 
 $primary-color-alt: lighten($primary-color, 10%)
 
-$secondary-color: #e7e7e7
+$secondary-color: #676565
 
 $alert-color: #f04124
 
@@ -226,26 +226,26 @@ $blue-wordpress: #22769B
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
-// $header-font-style: normal;
-// $header-font-color: $jet;
+//$header-font-style: $body-font-family
+$header-font-color: #040708
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
-// $h4-font-size: rem-calc(23);
-// $h5-font-size: rem-calc(18);
+$h1-font-size: rem-calc(52)
+$h2-font-size: rem-calc(28)
+$h3-font-size: rem-calc(22)
+$h4-font-size: rem-calc(18)
+$h5-font-size: rem-calc(18)
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10) !default;
-// $h2-font-reduction: rem-calc(10) !default;
-// $h3-font-reduction: rem-calc(5) !default;
-// $h4-font-reduction: rem-calc(5) !default;
+$h1-font-reduction: rem-calc(16)
+$h2-font-reduction: rem-calc(6)
+$h3-font-reduction: rem-calc(2)
+$h4-font-reduction: rem-calc(0)
 // $h5-font-reduction: 0 !default;
 // $h6-font-reduction: 0 !default;
 
@@ -263,7 +263,7 @@ $blue-wordpress: #22769B
 // We use these to style paragraphs
 // $paragraph-font-family: inherit;
 // $paragraph-font-weight: $font-weight-normal;
-// $paragraph-font-size: 1rem;
+$paragraph-font-size: rem-calc(20)
 // $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
@@ -731,10 +731,10 @@ $blue-wordpress: #22769B
 // $inline-list-top-margin: 0;
 // $inline-list-opposite-margin: 0;
 // $inline-list-bottom-margin: rem-calc(17);
-// $inline-list-default-float-margin: rem-calc(-22);
-// $inline-list-default-float-list-margin: rem-calc(22);
+$inline-list-default-float-margin: rem-calc(-28)
+$inline-list-default-float-list-margin: rem-calc(28)
 
-// $inline-list-padding: 0;
+//$inline-list-padding: 2rem 0 0 0;
 
 // We use this to control the overflow of the inline list.
 // $inline-list-overflow: hidden;
@@ -1149,12 +1149,12 @@ $blue-wordpress: #22769B
 // $include-html-nav-classes: $include-html-classes;
 
 // We use this to control padding.
-// $side-nav-padding: rem-calc(14 0);
+$side-nav-padding: rem-calc(0 0)
 
 // We use these to control list styles.
 // $side-nav-list-type: none;
 // $side-nav-list-position: inside;
-// $side-nav-list-margin: rem-calc(0 0 7 0);
+$side-nav-list-margin: rem-calc(0 0 0 0)
 
 // We use these to control link styles.
 // $side-nav-link-color: $primary-color;
@@ -1162,8 +1162,8 @@ $blue-wordpress: #22769B
 // $side-nav-link-color-hover: scale-color($side-nav-link-color, $lightness: 30%);
 // $side-nav-link-bg-hover: hsla(0, 0, 0, 0.025);
 // $side-nav-link-margin: 0;
-// $side-nav-link-padding: rem-calc(7 14);
-// $side-nav-font-size: rem-calc(14);
+$side-nav-link-padding: rem-calc(14 0)
+$side-nav-font-size: rem-calc(18)
 // $side-nav-font-weight: $font-weight-normal;
 // $side-nav-font-weight-active: $side-nav-font-weight;
 // $side-nav-font-family: $body-font-family;
