added about page styled sass a bit

--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -12,7 +12,7 @@ h1
   color: #16161D
   font-weight: 700
   line-height: 1.2em
-  margin-bottom: 1rem
+  max-width: 720px
   a
     color: #16161D
   a.hover
@@ -21,6 +21,9 @@ h1
 h2
   color: $secondary-color
   line-height: 1.4em
+  margin-bottom: 0px
+  padding-bottom: 0px
+  max-width: 620px
   
 h3
   font-weight: 700
@@ -36,6 +39,7 @@ h5
     color: $primary-color
 p
   max-width: 720px
+  margin-bottom: 0px
 
 
 // Banner
@@ -47,16 +51,20 @@ p
 
 .wordmark
   padding-top: 1.5rem
-  padding-left: 1rem
 
-.menu
+.navigate
   padding-top: 1.5rem
+  padding-right: 1rem
+  float: right
 
 
 // Content Types
 
-.project-title
-  padding-bottom: 1rem
+.indent-paragraph
+  margin-bottom: 0px
+  text-indent: 2rem
+
+.page-title
   padding-top: 4rem
 
 .body-content
@@ -67,8 +75,6 @@ p
 
 .project-img-wide
   padding-bottom: 2rem
-  padding-left: 0rem
-  padding-right: 0rem
 
 .project-thumb-img
   padding-bottom: .5rem
@@ -76,12 +82,16 @@ p
 .project-thumb
   padding-bottom: 1rem
 
+.first-project-row
+  padding-top: 4rem
+
 .more-work
   padding-top: 1rem
   padding-bottom: 1rem
 
 .footer
   margin-bottom: 2rem
+  margin-top: 2rem
 
 
 // Headers
