--- a/app/css/app.css
+++ b/app/css/app.css
@@ -331,8 +331,8 @@ meta.foundation-mq-medium {
   width: 40.063em; }
 
 meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:64.063em)/";
-  width: 64.063em; }
+  font-family: "/only screen and (min-width:79.063em)/";
+  width: 79.063em; }
 
 meta.foundation-mq-xlarge {
   font-family: "/only screen and (min-width:90.063em)/";
@@ -358,7 +358,7 @@ html, body {
 
 body {
   background: #fff;
-  color: #676565;
+  color: #16161D;
   padding: 0;
   margin: 0;
   font-family: ff-dagny-web-pro;
@@ -901,7 +901,7 @@ select {
     right: 91.6666666667%;
     left: auto; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .large-push-0 {
     position: relative;
     left: 0%;
@@ -1435,7 +1435,7 @@ select {
     .medium-block-grid-12 > li:nth-of-type(12n+1) {
       clear: both; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .large-block-grid-1 > li {
     width: 100%;
     list-style: none; }
@@ -2909,7 +2909,7 @@ label.error {
         width: auto;
         margin: auto;
         float: none; } }
-  @media only screen and (min-width:64.063em) {
+  @media only screen and (min-width:79.063em) {
     .icon-bar.large-vertical {
       height: 100%;
       width: auto; }
@@ -2941,7 +2941,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.two-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .icon-bar.two-up.large-vertical .item {
     width: auto; } }
 .icon-bar.three-up .item {
@@ -2951,7 +2951,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.three-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .icon-bar.three-up.large-vertical .item {
     width: auto; } }
 .icon-bar.four-up .item {
@@ -2961,7 +2961,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.four-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .icon-bar.four-up.large-vertical .item {
     width: auto; } }
 .icon-bar.five-up .item {
@@ -2971,7 +2971,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.five-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .icon-bar.five-up.large-vertical .item {
     width: auto; } }
 .icon-bar.six-up .item {
@@ -2981,7 +2981,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.six-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .icon-bar.six-up.large-vertical .item {
     width: auto; } }
 
@@ -4124,7 +4124,7 @@ table {
   .small-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:40.063em) and (max-width:64em) {
+@media only screen and (min-width:40.063em) and (max-width:79em) {
   .medium-only-text-left {
     text-align: left !important; }
   .medium-only-text-right {
@@ -4144,7 +4144,7 @@ table {
   .medium-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:64.063em) and (max-width:90em) {
+@media only screen and (min-width:79.063em) and (max-width:90em) {
   .large-only-text-left {
     text-align: left !important; }
   .large-only-text-right {
@@ -4154,7 +4154,7 @@ table {
   .large-only-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .large-text-left {
     text-align: left !important; }
   .large-text-right {
@@ -4257,13 +4257,13 @@ h2 {
   font-size: 1.375rem; }
 
 h3 {
-  font-size: 1.25rem; }
+  font-size: 1.125rem; }
 
 h4 {
-  font-size: 1.125rem; }
+  font-size: 1.25rem; }
 
 h5 {
-  font-size: 1.125rem; }
+  font-size: 1.25rem; }
 
 h6 {
   font-size: 1rem; }
@@ -4358,7 +4358,7 @@ dl dd {
 abbr, acronym {
   text-transform: uppercase;
   font-size: 90%;
-  color: #676565;
+  color: #16161D;
   border-bottom: 1px dotted #DDDDDD;
   cursor: help; }
 
@@ -4413,11 +4413,11 @@ blockquote, blockquote p {
   h2 {
     font-size: 1.75rem; }
   h3 {
-    font-size: 1.375rem; }
+    font-size: 1.25rem; }
   h4 {
-    font-size: 1.125rem; }
+    font-size: 1.25rem; }
   h5 {
-    font-size: 1.125rem; }
+    font-size: 1.25rem; }
   h6 {
     font-size: 1rem; } }
 
@@ -5150,7 +5150,7 @@ meta.foundation-mq-topbar {
     line-height: 2.8125rem;
     margin: 0; }
   .tab-bar h1, .tab-bar h2, .tab-bar h3, .tab-bar h4 {
-    font-size: 1.125rem; }
+    font-size: 1.25rem; }
 
 .left-small {
   width: 2.8125rem;
@@ -5588,7 +5588,7 @@ ul.off-canvas-list {
     display: table-cell !important; } }
 
 /* large displays */
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:79.063em) {
   .hide-for-small-only, .show-for-small-up, .hide-for-small, .hide-for-small-down, .hide-for-medium-only, .show-for-medium-up, .hide-for-medium, .hide-for-medium-down, .show-for-large-only, .show-for-large-up, .show-for-large, .show-for-large-down, .hide-for-xlarge-only, .hide-for-xlarge-up, .hide-for-xxlarge-only, .hide-for-xxlarge-up {
     display: inherit !important; }
   .show-for-small-only, .hide-for-small-up, .show-for-small, .show-for-small-down, .show-for-medium-only, .hide-for-medium-up, .show-for-medium, .show-for-medium-down, .hide-for-large-only, .hide-for-large-up, .hide-for-large, .hide-for-large-down, .show-for-xlarge-only, .show-for-xlarge-up, .show-for-xxlarge-only, .show-for-xxlarge-up {
@@ -5810,7 +5810,7 @@ h1 {
   color: #16161D;
   font-weight: 700;
   line-height: 1.2em;
-  margin-bottom: 1rem; }
+  max-width: 720px; }
   h1 a {
     color: #16161D; }
   h1 a.hover {
@@ -5818,7 +5818,10 @@ h1 {
 
 h2 {
   color: #676565;
-  line-height: 1.4em; }
+  line-height: 1.4em;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  max-width: 620px; }
 
 h3 {
   font-weight: 700; }
@@ -5833,7 +5836,8 @@ h5 {
     color: #0072bc; }
 
 p {
-  max-width: 720px; }
+  max-width: 720px;
+  margin-bottom: 0px; }
 
 .logo {
   padding-top: 0.5rem;
@@ -5841,14 +5845,18 @@ p {
   position: fixed; }
 
 .wordmark {
-  padding-top: 1.5rem;
-  padding-left: 1rem; }
-
-.menu {
   padding-top: 1.5rem; }
 
-.project-title {
-  padding-bottom: 1rem;
+.navigate {
+  padding-top: 1.5rem;
+  padding-right: 1rem;
+  float: right; }
+
+.indent-paragraph {
+  margin-bottom: 0px;
+  text-indent: 2rem; }
+
+.page-title {
   padding-top: 4rem; }
 
 .body-content {
@@ -5858,9 +5866,7 @@ p {
   padding-bottom: 2rem; }
 
 .project-img-wide {
-  padding-bottom: 2rem;
-  padding-left: 0rem;
-  padding-right: 0rem; }
+  padding-bottom: 2rem; }
 
 .project-thumb-img {
   padding-bottom: 0.5rem; }
@@ -5868,12 +5874,16 @@ p {
 .project-thumb {
   padding-bottom: 1rem; }
 
+.first-project-row {
+  padding-top: 4rem; }
+
 .more-work {
   padding-top: 1rem;
   padding-bottom: 1rem; }
 
 .footer {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  margin-top: 2rem; }
 
 .color-swatch {
   margin-bottom: 44px;
@@ -6034,7 +6044,7 @@ i.fa {
     padding-right: 5px; }
 
 .block .block-title {
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   margin-top: 0; }
 
 .node-teaser {
