--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -101,7 +101,7 @@ $ff-alt: ff-zwo-corr-web-pro
 
 // We use these to control various global styles
 // $body-bg: $white;
-$body-font-color: #676565
+$body-font-color: #16161D
 $body-font-family: $ff-primary
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -181,8 +181,8 @@ $blue-wordpress: #22769B
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
-// $large-range: (64.063em, 90em);
+$medium-range: (40.063em, 79em)
+$large-range: (79.063em, 90em)
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
 
@@ -236,9 +236,9 @@ $header-font-color: #040708
 // We use these to control header font sizes
 $h1-font-size: rem-calc(52)
 $h2-font-size: rem-calc(28)
-$h3-font-size: rem-calc(22)
-$h4-font-size: rem-calc(18)
-$h5-font-size: rem-calc(18)
+$h3-font-size: rem-calc(20)
+$h4-font-size: rem-calc(20)
+$h5-font-size: rem-calc(20)
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
