--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -5,8 +5,6 @@
 //*  Styleguide
 
 //*******************************/
-body
-  padding: 1rem
 
 h1
   color: #16161D
@@ -19,14 +17,16 @@ h1
     color: $primary-color
 
 h2
-  color: $secondary-color
+  color: #16161D
   line-height: 1.4em
   margin-bottom: 0px
   padding-bottom: 0px
   max-width: 620px
   
 h3
+  color: #16161D
   font-weight: 700
+
 
 h4
   color: $primary-color
@@ -38,7 +38,7 @@ h5
   a
     color: $primary-color
 p
-  max-width: 720px
+  max-width: 620px
   margin-bottom: 0px
 
 
@@ -85,7 +85,10 @@ p
 .first-project-row
   padding-top: 4rem
 
-.more-work
+.padding-bottom
+  padding-bottom: 2rem
+
+.more-padding
   padding-top: 1rem
   padding-bottom: 1rem
 
