added pageand udated styles and about

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -361,7 +361,7 @@ body {
   color: #16161D;
   padding: 0;
   margin: 0;
-  font-family: ff-dagny-web-pro;
+  font-family: 'founders-text';
   font-weight: normal;
   font-style: normal;
   line-height: 150%;
@@ -1185,7 +1185,7 @@ select {
       color: #222222;
       padding: 1rem;
       display: block;
-      font-family: ff-dagny-web-pro;
+      font-family: 'founders-text';
       font-size: 1rem; }
       .accordion .accordion-navigation > a:hover, .accordion dd > a:hover {
         background: #e3e3e3; }
@@ -1577,7 +1577,7 @@ button, .button {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: ff-dagny-web-pro;
+  font-family: 'founders-text';
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -3164,7 +3164,7 @@ label.error {
 
 .label {
   font-weight: normal;
-  font-family: ff-dagny-web-pro;
+  font-family: 'founders-text';
   text-align: center;
   text-decoration: none;
   line-height: 1;
@@ -3539,7 +3539,7 @@ ul.pagination {
     color: #EEEEEE;
     font-weight: normal;
     font-size: 1rem;
-    font-family: ff-dagny-web-pro; }
+    font-family: 'founders-text'; }
   .pricing-table .price {
     background-color: #F6F6F6;
     padding: 0.9375rem 1.25rem;
@@ -3547,7 +3547,7 @@ ul.pagination {
     color: #333333;
     font-weight: normal;
     font-size: 2rem;
-    font-family: ff-dagny-web-pro; }
+    font-family: 'founders-text'; }
   .pricing-table .description {
     background-color: #FFFFFF;
     padding: 0.9375rem;
@@ -3818,7 +3818,7 @@ dialog {
   padding: 0 0;
   list-style-type: none;
   list-style-position: outside;
-  font-family: ff-dagny-web-pro; }
+  font-family: 'founders-text'; }
   .side-nav li {
     margin: 0 0 0 0;
     font-size: 1.125rem; }
@@ -3833,7 +3833,7 @@ dialog {
     .side-nav li.active > a:first-child:not(.button) {
       color: #1ea9ff;
       font-weight: normal;
-      font-family: ff-dagny-web-pro; }
+      font-family: 'founders-text'; }
     .side-nav li.divider {
       border-top: 1px solid;
       height: 0;
@@ -3943,7 +3943,7 @@ dialog {
     display: inline;
     margin-left: 1rem;
     margin-bottom: 0.625rem;
-    font-family: ff-dagny-web-pro;
+    font-family: 'founders-text';
     font-weight: normal;
     font-size: 0.875rem;
     color: #999999; }
@@ -4223,12 +4223,12 @@ a {
 p {
   font-family: inherit;
   font-weight: normal;
-  font-size: 1.25rem;
-  line-height: 1.6;
+  font-size: 1.375rem;
+  line-height: 1.4;
   margin-bottom: 1.25rem;
   text-rendering: optimizeLegibility; }
   p.lead {
-    font-size: 1.46875rem;
+    font-size: 1.59375rem;
     line-height: 1.6; }
   p aside {
     font-size: 0.875rem;
@@ -4237,27 +4237,27 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: ff-dagny-web-pro;
+  font-family: 'founders-text';
   font-weight: normal;
   font-style: normal;
-  color: #040708;
+  color: #16161D;
   text-rendering: optimizeLegibility;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem;
   line-height: 1.4; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
     font-size: 60%;
-    color: #3e6d7c;
+    color: #5b5b78;
     line-height: 0; }
 
 h1 {
-  font-size: 2.25rem; }
+  font-size: 2.8543175rem; }
 
 h2 {
-  font-size: 1.375rem; }
+  font-size: 1.840125rem; }
 
 h3 {
-  font-size: 1.125rem; }
+  font-size: 1.25rem; }
 
 h4 {
   font-size: 1.25rem; }
@@ -4270,7 +4270,7 @@ h6 {
 
 .subheader {
   line-height: 1.4;
-  color: #3e6d7c;
+  color: #5b5b78;
   font-weight: normal;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem; }
@@ -4307,8 +4307,8 @@ code {
 
 /* Lists */
 ul, ol, dl {
-  font-size: 1.25rem;
-  line-height: 1.6;
+  font-size: 1.375rem;
+  line-height: 1.4;
   margin-bottom: 1.25rem;
   list-style-position: outside;
   font-family: inherit; }
@@ -4373,15 +4373,15 @@ blockquote {
   blockquote cite {
     display: block;
     font-size: 0.8125rem;
-    color: #2a4a54; }
+    color: #444459; }
     blockquote cite:before {
       content: "\2014 \0020"; }
     blockquote cite a, blockquote cite a:visited {
-      color: #2a4a54; }
+      color: #444459; }
 
 blockquote, blockquote p {
-  line-height: 1.6;
-  color: #3e6d7c; }
+  line-height: 1.4;
+  color: #5b5b78; }
 
 /* Microformats */
 .vcard {
@@ -4409,11 +4409,11 @@ blockquote, blockquote p {
   h1, h2, h3, h4, h5, h6 {
     line-height: 1.4; }
   h1 {
-    font-size: 3.25rem; }
+    font-size: 3.8543175rem; }
   h2 {
-    font-size: 1.75rem; }
+    font-size: 2.215125rem; }
   h3 {
-    font-size: 1.25rem; }
+    font-size: 1.375rem; }
   h4 {
     font-size: 1.25rem; }
   h5 {
@@ -4490,7 +4490,7 @@ blockquote, blockquote p {
       background-color: #EFEFEF;
       color: #222222;
       padding: 1rem 2rem;
-      font-family: ff-dagny-web-pro;
+      font-family: 'founders-text';
       font-size: 1rem; }
       .tabs dd > a:hover, .tabs .tab-title > a:hover {
         background-color: #e1e1e1; }
@@ -4788,7 +4788,7 @@ meta.foundation-mq-topbar {
       color: #FFFFFF;
       padding: 12px 0 12px 0;
       padding-left: 15px;
-      font-family: ff-dagny-web-pro;
+      font-family: 'founders-text';
       font-size: 0.8125rem;
       font-weight: normal;
       text-transform: none; }
@@ -5803,9 +5803,40 @@ th.hide-for-touch {
 .half {
   width: 50%; }
 
+@font-face {
+  font-family: 'founders';
+  src: url('../fonts/FoundersGroteskHeading_Semibold.eot');
+  src: url('../fonts/FoundersGroteskHeading_Semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskHeading_Semibold.woff') format('woff'), url('../fonts/FoundersGroteskHeading_Semibold.ttf') format('truetype'), url('../fonts/FoundersGroteskHeading_Semibold.svg') format('svg');
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'founders-text';
+  src: url('../fonts/FoundersGroteskText_Regular.eot');
+  src: url('../fonts/FoundersGroteskText_Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Regular.woff') format('woff'), url('../fonts/FoundersGroteskText_Regular.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Regular.svg') format('svg');
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'founders-text';
+  src: url('../fonts/FoundersGroteskText_Regular_Italic.eot');
+  src: url('../fonts/FoundersGroteskText_Regular_Italic.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Regular_Italic.woff') format('woff'), url('../fonts/FoundersGroteskText_Regular_Italic.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Regular_Italic.svg') format('svg');
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'founders-text';
+  src: url('../fonts/FoundersGroteskText_Semibold.eot');
+  src: url('../fonts/FoundersGroteskText_Semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Semibold.woff') format('woff'), url('../fonts/FoundersGroteskText_Semibold.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Semibold.svg') format('svg');
+  font-weight: bold;
+  font-style: normal; }
+
+p {
+  max-width: 720px;
+  margin-bottom: 0px; }
+
 h1 {
-  color: #16161D;
-  font-weight: 700;
+  font-family: 'founders';
   line-height: 1.2em;
   max-width: 720px; }
   h1 a {
@@ -5814,48 +5845,41 @@ h1 {
     color: #0072bc; }
 
 h2 {
-  color: #16161D;
-  line-height: 1.4em;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  max-width: 620px; }
+  font-family: 'founders-text';
+  line-height: 1.2em;
+  max-width: 720px; }
 
 h3 {
-  color: #16161D;
+  font-family: 'founders-text';
   font-weight: 700; }
 
 h4 {
-  color: #0072bc; }
+  font-family: 'founders-text'; }
 
 h5 {
   color: #676565;
-  font-weight: 400; }
+  max-width: 620px; }
   h5 a {
     color: #0072bc; }
 
-p {
-  max-width: 620px;
-  margin-bottom: 0px; }
-
 .logo {
-  padding-top: 0.5rem;
-  padding-left: 1rem;
+  padding-top: 1.5rem;
+  padding-left: 2rem;
   position: fixed; }
 
 .wordmark {
   padding-top: 1.5rem; }
 
 .navigate {
-  padding-top: 1.5rem;
-  padding-right: 1rem;
-  float: right; }
+  padding-top: 1.5rem; }
 
 .indent-paragraph {
   margin-bottom: 0px;
   text-indent: 2rem; }
 
 .page-title {
-  padding-top: 4rem; }
+  padding-top: 4rem;
+  padding-bottom: 2rem; }
 
 .body-content {
   padding-bottom: 2rem; }
@@ -5885,67 +5909,6 @@ p {
 .footer {
   margin-bottom: 2rem;
   margin-top: 2rem; }
-
-.color-swatch {
-  margin-bottom: 44px;
-  width: 60px;
-  height: 60px; }
-  .color-swatch:after {
-    display: block;
-    padding-top: 65px; }
-
-.half .color-swatch {
-  width: 100% !important; }
-
-@media only screen and (min-width:40.063em) {
-  .color-swatch {
-    width: 100px;
-    height: 100px; }
-    .color-swatch:after {
-      padding-top: 105px; } }
-
-.dropdowns .dropdown-menu {
-  width: 100%; }
-
-.brand-primary {
-  background-color: #0072bc; }
-  .brand-primary:after {
-    content: "#0072bc"; }
-
-.brand-primary-alt {
-  background-color: #0093ef; }
-  .brand-primary-alt:after {
-    content: "#0093ef"; }
-
-.brand-success {
-  background-color: #43AC6A; }
-  .brand-success:after {
-    content: "#43AC6A"; }
-
-.brand-success-alt {
-  background-color: #61c184; }
-  .brand-success-alt:after {
-    content: "#61c184"; }
-
-.brand-alert {
-  background-color: #f04124; }
-  .brand-alert:after {
-    content: "#f04124"; }
-
-.brand-alert-alt {
-  background-color: #f36954; }
-  .brand-alert-alt:after {
-    content: "#f36954"; }
-
-.brand-secondary {
-  background-color: #676565; }
-  .brand-secondary:after {
-    content: "#676565"; }
-
-h4, .h4 {
-  color: #999999;
-  letter-spacing: 0.04em;
-  text-transform: uppercase; }
 
 h1.no-margin, h2.no-margin, h3.no-margin, h4.no-margin, h5.no-margin, h6.no-margin, .h1.no-margin, .h2.no-margin, .h3.no-margin, .h4.no-margin, .h5.no-margin, .h6.no-margin {
   margin-bottom: 0;
@@ -6045,7 +6008,7 @@ i.fa {
     padding-right: 5px; }
 
 .block .block-title {
-  font-size: 1.25rem;
+  font-size: 1.375rem;
   margin-top: 0; }
 
 .node-teaser {
