--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -91,9 +91,10 @@ $column-gutter: rem-calc(56)
 // $font-weight-bold: bold !default;
 
 // Global
-
-$ff-primary: ff-dagny-web-pro
-$ff-alt: ff-zwo-corr-web-pro
+$founders: 'founders'
+$founders-text: 'founders-text'
+$ff-primary: $founders-text
+$ff-alt: $founders
 
 // We use these to define default font weights
 // $font-weight-normal: normal !default;
@@ -227,18 +228,21 @@ $large-range: (79.063em, 90em)
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 //$header-font-style: $body-font-family
-$header-font-color: #040708
+$header-font-color: #16161D
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(52)
-$h2-font-size: rem-calc(28)
-$h3-font-size: rem-calc(20)
-$h4-font-size: rem-calc(20)
 $h5-font-size: rem-calc(20)
+$h4-font-size: rem-calc(20)
+$h3-font-size: rem-calc(22)
+$h2-font-size: $h3-font-size * 1.611
+$h1-font-size: $h2-font-size * 1.74
+
+
+
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
@@ -263,8 +267,8 @@ $h4-font-reduction: rem-calc(0)
 // We use these to style paragraphs
 // $paragraph-font-family: inherit;
 // $paragraph-font-weight: $font-weight-normal;
-$paragraph-font-size: rem-calc(20)
-// $paragraph-line-height: 1.6;
+$paragraph-font-size: rem-calc(22)
+$paragraph-line-height: 1.4
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
