--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -1,4 +1,34 @@
 
+//*  Typography
+
+@font-face
+  font-family: $founders
+  src: url('../fonts/FoundersGroteskHeading_Semibold.eot')
+  src: url('../fonts/FoundersGroteskHeading_Semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskHeading_Semibold.woff') format('woff'), url('../fonts/FoundersGroteskHeading_Semibold.ttf') format('truetype'), url('../fonts/FoundersGroteskHeading_Semibold.svg') format('svg')
+  font-weight: normal
+  font-style: normal
+
+@font-face
+  font-family: $founders-text
+  src: url('../fonts/FoundersGroteskText_Regular.eot')
+  src: url('../fonts/FoundersGroteskText_Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Regular.woff') format('woff'), url('../fonts/FoundersGroteskText_Regular.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Regular.svg') format('svg')
+  font-weight: normal
+  font-style: normal
+
+@font-face
+  font-family: $founders-text
+  src: url('../fonts/FoundersGroteskText_Regular_Italic.eot')
+  src: url('../fonts/FoundersGroteskText_Regular_Italic.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Regular_Italic.woff') format('woff'), url('../fonts/FoundersGroteskText_Regular_Italic.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Regular_Italic.svg') format('svg')
+  font-weight: normal
+  font-style: italic
+
+@font-face
+  font-family: $founders-text
+  src: url('../fonts/FoundersGroteskText_Semibold.eot')
+  src: url('../fonts/FoundersGroteskText_Semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/FoundersGroteskText_Semibold.woff') format('woff'), url('../fonts/FoundersGroteskText_Semibold.ttf') format('truetype'), url('../fonts/FoundersGroteskText_Semibold.svg') format('svg')
+  font-weight: bold
+  font-style: normal
+
 
 //********************************
 
@@ -6,9 +36,13 @@
 
 //*******************************/
 
+p
+  max-width: 720px
+  margin-bottom: 0px
+
+
 h1
-  color: #16161D
-  font-weight: 700
+  font-family: $ff-alt
   line-height: 1.2em
   max-width: 720px
   a
@@ -17,36 +51,33 @@ h1
     color: $primary-color
 
 h2
-  color: #16161D
-  line-height: 1.4em
-  margin-bottom: 0px
-  padding-bottom: 0px
-  max-width: 620px
+  font-family: $ff-primary
+  line-height: 1.2em
+  max-width: 720px
   
 h3
-  color: #16161D
+  font-family: $ff-primary
   font-weight: 700
 
 
 h4
-  color: $primary-color
+  font-family: $ff-primary
 
 
 h5
   color: $secondary-color
-  font-weight: 400
+  max-width: 620px
+  
   a
     color: $primary-color
-p
-  max-width: 620px
-  margin-bottom: 0px
+
 
 
 // Banner
 
 .logo
-  padding-top: .5rem
-  padding-left: 1rem
+  padding-top: 1.5rem
+  padding-left: 2rem
   position: fixed
 
 .wordmark
@@ -54,8 +85,6 @@ p
 
 .navigate
   padding-top: 1.5rem
-  padding-right: 1rem
-  float: right
 
 
 // Content Types
@@ -66,6 +95,7 @@ p
 
 .page-title
   padding-top: 4rem
+  padding-bottom: 2rem
 
 .body-content
   padding-bottom: 2rem
@@ -101,64 +131,10 @@ p
 
 
 
-.color-swatch
-  margin-bottom: 44px
-  width: 60px
-  height: 60px
-  &:after
-    display: block
-    padding-top: 65px
-
-.half .color-swatch
-  width: 100% !important
-
-@media #{$medium-up}
-  .color-swatch
-    width: 100px
-    height: 100px
-    &:after
-      padding-top: 105px
-
 // Dropdowns
 
-.dropdowns
-  .dropdown-menu
-    width: 100%
 
 
 // Colors
 
-.brand-primary
-  background-color: $primary-color
-  &:after
-    content: "#{$primary-color}"
 
-.brand-primary-alt
-  background-color: $primary-color-alt
-  &:after
-    content: "#{$primary-color-alt}"
-
-.brand-success
-  background-color: $success-color
-  &:after
-    content: "#{$success-color}"
-
-.brand-success-alt
-  background-color: $success-color-alt
-  &:after
-    content: "#{$success-color-alt}"
-
-.brand-alert
-  background-color: $alert-color
-  &:after
-    content: "#{$alert-color}"
-
-.brand-alert-alt
-  background-color: $alert-color-alt
-  &:after
-    content: "#{$alert-color-alt}"
-
-.brand-secondary
-  background-color: $secondary-color
-  &:after
-    content: "#{$secondary-color}"
