--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -36,28 +36,40 @@
 
 //*******************************/
 
+body
+  padding: .875rem
+
 p
-  max-width: 720px
+  padding-right: .875rem
   margin-bottom: 0px
+  max-width: 600px
 
 
 h1
   font-family: $ff-alt
-  line-height: 1.2em
-  max-width: 720px
+  line-height: .9em
+  color: $primary-color
+
   a
     color: #16161D
   a.hover
     color: $primary-color
 
 h2
-  font-family: $ff-primary
-  line-height: 1.2em
-  max-width: 720px
+  font-family: $ff-alt
+  line-height: 1.1em
+  max-width: 40em
+
   
 h3
   font-family: $ff-primary
-  font-weight: 700
+  font-weight: bold
+  line-height: 1.2em
+  padding-right: 1.75rem
+  a
+    color: #16161D
+  a.hover
+    color: $primary-color
 
 
 h4
@@ -76,51 +88,57 @@ h5
 // Banner
 
 .logo
-  padding-top: 1.5rem
-  padding-left: 2rem
-  position: fixed
+  padding-top: .875rem
+  padding-bottom: 1.75rem
 
-.wordmark
-  padding-top: 1.5rem
-
-.navigate
-  padding-top: 1.5rem
+.menu
+  padding-top: .875rem
+  padding-right: .875rem
 
 
 // Content Types
 
 .indent-paragraph
+  margin-top: 0px
   margin-bottom: 0px
-  text-indent: 2rem
+  text-indent: 1.75rem
 
-.page-title
-  padding-top: 4rem
-  padding-bottom: 2rem
+.sub-title
+  padding-bottom: .875rem
 
 .body-content
-  padding-bottom: 2rem
+  padding-bottom: 1.75rem
 
 .project-img
-  padding-bottom: 2rem
+  position: relative
+  padding-bottom: 1.75rem
+  z-index: -100
 
 .project-img-wide
-  padding-bottom: 2rem
+  padding-bottom: 1.75rem
 
 .project-thumb-img
-  padding-bottom: .5rem
+  padding-bottom: .875rem
 
 .project-thumb
-  padding-bottom: 1rem
+  padding-bottom: 1.75rem
 
-.first-project-row
-  padding-top: 4rem
+.tags
+  padding-top: 1.75rem
 
-.padding-bottom
-  padding-bottom: 2rem
+.caption-large
+  position: absolute
+  margin-top: -5.5rem
+  padding-left: .875rem
+  padding-right: 1.25rem
+  padding-bottom: .875rem
+  padding-top: .7rem
+  background-color: $white
 
-.more-padding
-  padding-top: 1rem
-  padding-bottom: 1rem
+
+
+
+
 
 .footer
   margin-bottom: 2rem
