--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -81,7 +81,7 @@ $include-html-global-classes: $include-html-classes
 
 $row-width: rem-calc(2000)
 // $total-columns: 12;
-$column-gutter: rem-calc(56)
+$column-gutter: 1.75rem
 
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -95,6 +95,7 @@ $founders: 'founders'
 $founders-text: 'founders-text'
 $ff-primary: $founders-text
 $ff-alt: $founders
+
 
 // We use these to define default font weights
 // $font-weight-normal: normal !default;
@@ -182,8 +183,8 @@ $blue-wordpress: #22769B
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // $small-range: (0em, 40em);
-$medium-range: (40.063em, 79em)
-$large-range: (79.063em, 90em)
+// $medium-range: (40.063em, 60em):
+// $large-range: (60.063em, 90em):
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
 
@@ -224,6 +225,17 @@ $large-range: (79.063em, 90em)
 
 // $include-html-type-classes: $include-html-classes;
 
+// We use these to style paragraphs
+// $paragraph-font-family: inherit;
+// $paragraph-font-weight: $font-weight-normal;
+$paragraph-font-size: rem-calc(20)
+$paragraph-line-height: 1.4
+// $paragraph-margin-bottom: rem-calc(20);
+// $paragraph-aside-font-size: rem-calc(14);
+// $paragraph-aside-line-height: 1.35;
+// $paragraph-aside-font-style: italic;
+// $paragraph-text-rendering: optimizeLegibility;
+
 // We use these to control header font styles
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
@@ -235,15 +247,13 @@ $header-font-color: #16161D
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
+// $h6-font-size: 1rem;
 $h5-font-size: rem-calc(20)
 $h4-font-size: rem-calc(20)
-$h3-font-size: rem-calc(22)
-$h2-font-size: $h3-font-size * 1.611
-$h1-font-size: $h2-font-size * 1.74
+$h3-font-size: $paragraph-font-size * 1.618
+$h2-font-size: $h3-font-size * 1.618
+$h1-font-size: $h2-font-size * 1.618
 
-
-
-// $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
 $h1-font-reduction: rem-calc(16)
@@ -263,17 +273,6 @@ $h4-font-reduction: rem-calc(0)
 // A general <small> styling
 // $small-font-size: 60%;
 // $small-font-color: scale-color($header-font-color, $lightness: 35%);
-
-// We use these to style paragraphs
-// $paragraph-font-family: inherit;
-// $paragraph-font-weight: $font-weight-normal;
-$paragraph-font-size: rem-calc(22)
-$paragraph-line-height: 1.4
-// $paragraph-margin-bottom: rem-calc(20);
-// $paragraph-aside-font-size: rem-calc(14);
-// $paragraph-aside-line-height: 1.35;
-// $paragraph-aside-font-style: italic;
-// $paragraph-text-rendering: optimizeLegibility;
 
 // We use these to style <code> tags
 // $code-color: $oil;
@@ -734,7 +733,7 @@ $paragraph-line-height: 1.4
 // We use this to control the margins and padding of the inline list.
 // $inline-list-top-margin: 0;
 // $inline-list-opposite-margin: 0;
-// $inline-list-bottom-margin: rem-calc(17);
+$inline-list-bottom-margin: 0
 $inline-list-default-float-margin: rem-calc(-28)
 $inline-list-default-float-list-margin: rem-calc(28)
 
