--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -42,7 +42,7 @@ body
 p
   padding-right: .875rem
   margin-bottom: 0px
-  max-width: 600px
+  max-width: 660px
 
 
 h1
@@ -59,6 +59,7 @@ h2
   font-family: $ff-alt
   line-height: 1.1em
   max-width: 40em
+  max-width: 860px
 
   
 h3
@@ -66,6 +67,7 @@ h3
   font-weight: bold
   line-height: 1.2em
   padding-right: 1.75rem
+  max-width: 860px
   a
     color: #16161D
   a.hover
@@ -74,14 +76,16 @@ h3
 
 h4
   font-family: $ff-primary
+  font-weight: bold
+  text-transform: uppercase
 
 
 h5
-  color: $secondary-color
   max-width: 620px
+  font-style: italic
   
   a
-    color: $primary-color
+    color: $secondary-color
 
 
 
@@ -103,6 +107,19 @@ h5
   margin-bottom: 0px
   text-indent: 1.75rem
 
+.no-margin
+  margin-bottom: 0
+  padding-bottom: 0
+
+.small-padding
+  padding-bottom: .875rem
+
+.medium-padding
+  padding-bottom: 1.75rem
+
+.large-padding
+  padding-bottom: 3.5rem
+
 .sub-title
   padding-bottom: .875rem
 
@@ -117,8 +134,8 @@ h5
 .project-img-wide
   padding-bottom: 1.75rem
 
-.project-thumb-img
-  padding-bottom: .875rem
+.img-small
+  padding-bottom: 1.75rem
 
 .project-thumb
   padding-bottom: 1.75rem
@@ -135,14 +152,11 @@ h5
   padding-top: .7rem
   background-color: $white
 
-
-
-
-
-
 .footer
   margin-bottom: 2rem
   margin-top: 2rem
+
+
 
 
 // Headers
