--- a/app/css/app.css
+++ b/app/css/app.css
@@ -331,8 +331,8 @@ meta.foundation-mq-medium {
   width: 40.063em; }
 
 meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:64.063em)/";
-  width: 64.063em; }
+  font-family: "/only screen and (min-width:60.063em)/";
+  width: 60.063em; }
 
 meta.foundation-mq-xlarge {
   font-family: "/only screen and (min-width:90.063em)/";
@@ -417,7 +417,7 @@ select {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 125rem; }
+  max-width: 90rem; }
   .row:before, .row:after {
     content: " ";
     display: table; }
@@ -901,7 +901,7 @@ select {
     right: 91.6666666667%;
     left: auto; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .large-push-0 {
     position: relative;
     left: 0%;
@@ -1234,8 +1234,8 @@ select {
     border-color: #de2b0f;
     color: #FFFFFF; }
   .alert-box.secondary {
-    background-color: #676565;
-    border-color: #595757;
+    background-color: #16161D;
+    border-color: #131319;
     color: #FFFFFF; }
   .alert-box.warning {
     background-color: #f08a24;
@@ -1244,7 +1244,7 @@ select {
   .alert-box.info {
     background-color: #a0d3e8;
     border-color: #74bfdd;
-    color: #232222; }
+    color: #07070a; }
   .alert-box.alert-close {
     opacity: 0; }
 
@@ -1435,7 +1435,7 @@ select {
     .medium-block-grid-12 > li:nth-of-type(12n+1) {
       clear: both; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .large-block-grid-1 > li {
     width: 100%;
     list-style: none; }
@@ -1529,8 +1529,8 @@ select {
   list-style: none;
   border-style: solid;
   border-width: 1px;
-  background-color: #bbb9b9;
-  border-color: #a8a7a7;
+  background-color: #8a8aa6;
+  border-color: #787899;
   border-radius: 3px; }
   .breadcrumbs > * {
     margin: 0;
@@ -1601,11 +1601,11 @@ button, .button {
   button:hover, button:focus, .button:hover, .button:focus {
     color: #FFFFFF; }
   button.secondary, .button.secondary {
-    background-color: #676565;
-    border-color: #525151;
+    background-color: #16161D;
+    border-color: #121217;
     color: #FFFFFF; }
     button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
-      background-color: #525151; }
+      background-color: #121217; }
     button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
       color: #FFFFFF; }
   button.success, .button.success {
@@ -1670,18 +1670,18 @@ button, .button {
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
       background-color: #0072bc; }
     button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
-      background-color: #676565;
-      border-color: #525151;
+      background-color: #16161D;
+      border-color: #121217;
       color: #FFFFFF;
       cursor: default;
       opacity: 0.7;
       box-shadow: none; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
-        background-color: #525151; }
+        background-color: #121217; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
         color: #FFFFFF; }
       button.disabled.secondary:hover, button.disabled.secondary:focus, button[disabled].secondary:hover, button[disabled].secondary:focus, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
-        background-color: #676565; }
+        background-color: #16161D; }
     button.disabled.success, button[disabled].success, .button.disabled.success, .button[disabled].success {
       background-color: #43AC6A;
       border-color: #368a54;
@@ -2909,7 +2909,7 @@ label.error {
         width: auto;
         margin: auto;
         float: none; } }
-  @media only screen and (min-width:64.063em) {
+  @media only screen and (min-width:60.063em) {
     .icon-bar.large-vertical {
       height: 100%;
       width: auto; }
@@ -2941,7 +2941,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.two-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .icon-bar.two-up.large-vertical .item {
     width: auto; } }
 .icon-bar.three-up .item {
@@ -2951,7 +2951,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.three-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .icon-bar.three-up.large-vertical .item {
     width: auto; } }
 .icon-bar.four-up .item {
@@ -2961,7 +2961,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.four-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .icon-bar.four-up.large-vertical .item {
     width: auto; } }
 .icon-bar.five-up .item {
@@ -2971,7 +2971,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.five-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .icon-bar.five-up.large-vertical .item {
     width: auto; } }
 .icon-bar.six-up .item {
@@ -2981,7 +2981,7 @@ label.error {
 @media only screen and (min-width:40.063em) {
   .icon-bar.six-up.medium-vertical .item {
     width: auto; } }
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .icon-bar.six-up.large-vertical .item {
     width: auto; } }
 
@@ -3190,7 +3190,7 @@ label.error {
     background-color: #43AC6A;
     color: #FFFFFF; }
   .label.secondary {
-    background-color: #676565;
+    background-color: #16161D;
     color: #FFFFFF; }
 
 [data-magellan-expedition], [data-magellan-expedition-clone] {
@@ -3582,7 +3582,7 @@ ul.pagination {
     height: 100%;
     display: block; }
   .progress.secondary .meter {
-    background: #676565;
+    background: #16161D;
     height: 100%;
     display: block; }
   .progress.success .meter {
@@ -3664,7 +3664,7 @@ ul.pagination {
   display: inline-block;
   position: absolute;
   height: 0.875rem;
-  background: #666464; }
+  background: #16161d; }
 
 .range-slider-handle {
   display: inline-block;
@@ -3719,7 +3719,7 @@ ul.pagination {
   @media only screen and (min-width:40.063em) {
     .reveal-modal {
       width: 80%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
@@ -3735,35 +3735,35 @@ ul.pagination {
   @media only screen and (min-width:40.063em) {
     .reveal-modal.tiny {
       width: 30%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.small {
       width: 40%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.medium {
       width: 60%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.large {
       width: 70%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
   @media only screen and (min-width:40.063em) {
     .reveal-modal.xlarge {
       width: 95%;
-      max-width: 125rem;
+      max-width: 90rem;
       left: 0;
       right: 0;
       margin: 0 auto; } }
@@ -3777,7 +3777,7 @@ ul.pagination {
     @media only screen and (min-width:40.063em) {
       .reveal-modal.full {
         width: 100vw;
-        max-width: 125rem;
+        max-width: 90rem;
         left: 0;
         right: 0;
         margin: 0 auto; } }
@@ -4124,7 +4124,7 @@ table {
   .small-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:40.063em) and (max-width:64em) {
+@media only screen and (min-width:40.063em) and (max-width:60em) {
   .medium-only-text-left {
     text-align: left !important; }
   .medium-only-text-right {
@@ -4144,7 +4144,7 @@ table {
   .medium-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:64.063em) and (max-width:90em) {
+@media only screen and (min-width:60.063em) and (max-width:90em) {
   .large-only-text-left {
     text-align: left !important; }
   .large-only-text-right {
@@ -4154,7 +4154,7 @@ table {
   .large-only-text-justify {
     text-align: justify !important; } }
 
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .large-text-left {
     text-align: left !important; }
   .large-text-right {
@@ -4247,17 +4247,17 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.4; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
     font-size: 60%;
-    color: #5b5b78;
+    color: #777777;
     line-height: 0; }
 
 h1 {
-  font-size: 4.29475129rem; }
+  font-size: 3.54475129rem; }
 
 h2 {
-  font-size: 2.897405rem; }
+  font-size: 2.397405rem; }
 
 h3 {
-  font-size: 1.8975rem; }
+  font-size: 1.6475rem; }
 
 h4 {
   font-size: 1.25rem; }
@@ -4299,10 +4299,10 @@ code {
   font-family: Consolas, 'Liberation Mono', Courier, monospace;
   font-weight: normal;
   color: #333333;
-  background-color: #d2d1d1;
+  background-color: #b1b1c4;
   border-width: 1px;
   border-style: solid;
-  border-color: #bdbcbc;
+  border-color: #9c9cb4;
   padding: 0.125rem 0.3125rem 0.0625rem; }
 
 /* Lists */
@@ -4804,11 +4804,11 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > a.button.secondary {
-        background-color: #676565;
-        border-color: #525151;
+        background-color: #16161D;
+        border-color: #121217;
         color: #FFFFFF; }
         .top-bar-section ul li > a.button.secondary:hover, .top-bar-section ul li > a.button.secondary:focus {
-          background-color: #525151; }
+          background-color: #121217; }
         .top-bar-section ul li > a.button.secondary:hover, .top-bar-section ul li > a.button.secondary:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > a.button.success {
@@ -4839,11 +4839,11 @@ meta.foundation-mq-topbar {
       .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
         color: #FFFFFF; }
       .top-bar-section ul li > button.secondary {
-        background-color: #676565;
-        border-color: #525151;
+        background-color: #16161D;
+        border-color: #121217;
         color: #FFFFFF; }
         .top-bar-section ul li > button.secondary:hover, .top-bar-section ul li > button.secondary:focus {
-          background-color: #525151; }
+          background-color: #121217; }
         .top-bar-section ul li > button.secondary:hover, .top-bar-section ul li > button.secondary:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > button.success {
@@ -4967,7 +4967,7 @@ meta.foundation-mq-topbar {
     .top-bar.expanded {
       background: #333333; }
   .contain-to-grid .top-bar {
-    max-width: 125rem;
+    max-width: 90rem;
     margin: 0 auto;
     margin-bottom: 0; }
   .top-bar-section {
@@ -5588,7 +5588,7 @@ ul.off-canvas-list {
     display: table-cell !important; } }
 
 /* large displays */
-@media only screen and (min-width:64.063em) {
+@media only screen and (min-width:60.063em) {
   .hide-for-small-only, .show-for-small-up, .hide-for-small, .hide-for-small-down, .hide-for-medium-only, .show-for-medium-up, .hide-for-medium, .hide-for-medium-down, .show-for-large-only, .show-for-large-up, .show-for-large, .show-for-large-down, .hide-for-xlarge-only, .hide-for-xlarge-up, .hide-for-xxlarge-only, .hide-for-xxlarge-up {
     display: inherit !important; }
   .show-for-small-only, .hide-for-small-up, .show-for-small, .show-for-small-down, .show-for-medium-only, .hide-for-medium-up, .show-for-medium, .show-for-medium-down, .hide-for-large-only, .hide-for-large-up, .hide-for-large, .hide-for-large-down, .show-for-xlarge-only, .show-for-xlarge-up, .show-for-xxlarge-only, .show-for-xxlarge-up {
@@ -5835,46 +5835,72 @@ body {
   padding: 0.875rem; }
 
 p {
+  padding-left: 0.15rem;
   padding-right: 0.875rem;
-  margin-bottom: 0px;
   max-width: 660px; }
+  p a {
+    color: #777777;
+    border-bottom: 1px solid #0072bc; }
+  p a.hover {
+    color: #0072bc;
+    border-bottom: 1px solid #0072bc; }
 
 h1 {
   font-family: 'founders';
   line-height: 0.9em;
-  color: #0072bc; }
+  color: #0072bc;
+  max-width: 860px;
+  margin-top: 0; }
   h1 a {
     color: #16161D; }
   h1 a.hover {
-    color: #0072bc; }
+    color: #777777; }
 
 h2 {
   font-family: 'founders';
   line-height: 1.1em;
   max-width: 40em;
-  max-width: 860px; }
+  max-width: 860px;
+  padding-bottom: 0.875rem;
+  padding-left: 0.1rem;
+  margin-top: 0; }
+  h2 a {
+    color: #16161D; }
+  h2 a.hover {
+    border-bottom: 2px solid #CCCCCC; }
 
 h3 {
   font-family: 'founders-text';
   font-weight: bold;
   line-height: 1.2em;
   padding-right: 1.75rem;
-  max-width: 860px; }
+  max-width: 860px;
+  padding-left: 0.1rem;
+  margin-top: 0; }
   h3 a {
     color: #16161D; }
   h3 a.hover {
-    color: #0072bc; }
+    color: #16161D;
+    border-bottom: 2px solid #CCCCCC; }
 
 h4 {
   font-family: 'founders-text';
   font-weight: bold;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  padding-left: 0.15rem;
+  margin-top: 0; }
 
 h5 {
   max-width: 620px;
-  font-style: italic; }
+  font-style: italic;
+  padding-left: 0.15rem;
+  margin-top: 0; }
   h5 a {
-    color: #676565; }
+    color: #777777;
+    border-bottom: 1px solid #0072bc; }
+  h5 a.hover {
+    color: #0072bc;
+    border-bottom: 1px solid #0072bc; }
 
 .logo {
   padding-top: 0.875rem;
@@ -5883,15 +5909,6 @@ h5 {
 .menu {
   padding-top: 0.875rem;
   padding-right: 0.875rem; }
-
-.indent-paragraph {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  text-indent: 1.75rem; }
-
-.no-margin {
-  margin-bottom: 0;
-  padding-bottom: 0; }
 
 .small-padding {
   padding-bottom: 0.875rem; }
@@ -5902,9 +5919,6 @@ h5 {
 .large-padding {
   padding-bottom: 3.5rem; }
 
-.sub-title {
-  padding-bottom: 0.875rem; }
-
 .body-content {
   padding-bottom: 1.75rem; }
 
@@ -5913,30 +5927,34 @@ h5 {
   padding-bottom: 1.75rem;
   z-index: -100; }
 
-.project-img-wide {
-  padding-bottom: 1.75rem; }
-
-.img-small {
-  padding-bottom: 1.75rem; }
-
-.project-thumb {
-  padding-bottom: 1.75rem; }
-
 .tags {
   padding-top: 1.75rem; }
 
 .caption-large {
   position: absolute;
-  margin-top: -5.5rem;
-  padding-left: 0.875rem;
+  margin-top: -5.25rem;
   padding-right: 1.25rem;
-  padding-bottom: 0.875rem;
+  padding-bottom: 1rem;
   padding-top: 0.7rem;
   background-color: #FFFFFF; }
+  .caption-large a {
+    color: #16161D; }
+  .caption-large a.hover {
+    border-bottom: 2px solid #CCCCCC; }
+
+.note-teaser {
+  background-color: #F6F6F6;
+  padding: 3.5rem 1.75rem 3rem 1.75rem; }
 
 .footer {
   margin-bottom: 1.75rem;
   margin-top: 3.5rem; }
+
+.uva {
+  color: #d56e31; }
+
+.tacoma {
+  color: #4f8eba; }
 
 h1.no-margin, h2.no-margin, h3.no-margin, h4.no-margin, h5.no-margin, h6.no-margin, .h1.no-margin, .h2.no-margin, .h3.no-margin, .h4.no-margin, .h5.no-margin, .h6.no-margin {
   margin-bottom: 0;
@@ -6040,7 +6058,7 @@ i.fa {
   margin-top: 0; }
 
 .node-teaser {
-  border-bottom: 1px solid #676565;
+  border-bottom: 1px solid #16161D;
   padding-bottom: 35px;
   margin-bottom: 35px; }
   .node-teaser .field-name-body > p:last-child {
